# Bagatur.cpp

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml
cmake/: embed_binary.cmake
src/bagatur/: bitboard.h  castling_config.cpp  castling_config.h  castling_util.cpp  castling_util.h  check_util.h  chess_board.cpp  chess_board.h  chess_board_util.cpp  chess_board_util.h  chess_constants.cpp  chess_constants.h  eval_constants.h  magic.cpp  magic.h  material_util.h  move_generator.cpp  move_generator.h  move_util.h  repetition.h  see_util.cpp  see_util.h  static_moves.h  types.h  zobrist.cpp  zobrist.h
src/benchmark/: benchmark.cpp
src/board/: benchmark.cpp  bitboard.h  castling_config.cpp  castling_config.h  castling_util.cpp  castling_util.h  check_util.h  chess_board.cpp  chess_board.h  chess_board_util.cpp  chess_board_util.h  chess_constants.cpp  chess_constants.h  eval_constants.h  magic.cpp  magic.h  material_util.h  move_generator.cpp  move_generator.h  move_util.h  perft.cpp  repetition.h  see_util.cpp  see_util.h  static_moves.h  types.h  zobrist.cpp  zobrist.h
src/nnue/: README.md  benchmark_eval.cpp  nnue.cpp  nnue.h  nnue_kernels.h  nnue_kernels_avx2.cpp  nnue_kernels_avx512.cpp  nnue_kernels_scalar.cpp  perft_eval.cpp
src/perft/: perft.cpp
src/search/: README.md  history.h  mtd.cpp  mtd.h  search.cpp  search.h  search_main.cpp  tt.cpp  tt.h  types.h
src/search/smp/: searchers_merge.h  smp_searcher.cpp  smp_searcher.h
src/syzygy/: README.md  syzygy.cpp  syzygy.h
src/uci/: README.md  go.cpp  go.h  position.cpp  position.h  protocol.h  state_manager.cpp  state_manager.h  time_control.cpp  time_control.h  uci_main.cpp  uci_move.cpp  uci_move.h
